Fix map shown on small screen

--- a/style.css
+++ b/style.css
@@ -30,7 +30,17 @@
   height: 100%;
   
 }
-
+@media (max-width: 768px){
+  #map {
+    position: relative;
+    top: 0px;
+    bottom: 0 !important;
+    width: 100%;
+    height: 80vh;
+    
+  }
+  
+}
 .map-overlay {
   position: absolute;
   bottom: 0;
